implement class controller crud product